fix PPM Boss links paragraph spacing

--- a/responsive/style.css
+++ b/responsive/style.css
@@ -634,7 +634,7 @@ h1.sharepoint + p {
 }
 
 .responsive .ppm-links p {
-    margin-left: 105px;
+    margin-left: 122px;
 }
 
 /* -------------------- Events page ------------------------ */
